# prepper

./: .gitignore  CLAUDE.md  INITIAL_CODING_PROMPT.md
docs/api/: content-api.md  search-api.md  storage-api.md
docs/architecture/: data-flow.md  search-architecture.md  system-design.md
docs/content/: content-acquisition.md  content-spec.md  content_gap_analysis.md  content_strategy_tiered.md  curation-guide.md  download-status-report.md  pdf_extraction_plan.md  prepper-content-status.md  priority_content_sources.md  tier1_acquisition_report.md  tier1_action_plan.md  tier1_immediate_gaps.md  tiered_personas.md
docs/development/: setup-guide.md  sprint6-week2-summary.md
docs/project/: changelog.md  roadmap.md  sprint-tracker.md
docs/ui-ux/: design-system.md  navigation-flow.md
prepperapp/: .gitignore  P0_MOBILE_BUILD.sh  P0_MOBILE_OPTIMIZED.sh  PACKAGE_P0_MOBILE.sh  README.md  RUN_SEARCH_SAFETY_TEST.sh  SPRINT2_SUMMARY.md  SPRINT4_IMPLEMENTATION_SUMMARY.md  SPRINT4_PLAN.md  SPRINT5_COMPLETION_REPORT.md  SPRINT5_FINAL_RESULTS.md  SPRINT5_IMPLEMENTATION_SUMMARY.md  SPRINT5_RESULTS.md  SPRINT5_RUNNER.sh  SPRINT5_TEST_ANALYSIS.md  SPRINT6_FRESH_START_PROMPT.md  SPRINT6_PHASE2_PROMPT.md  SPRINT6_PROGRESS.md  SPRINT6_PROMPT.md  TEST_SEARCH_VALIDATION.sh
prepperapp/android/: README.md  settings.gradle
prepperapp/android/app/: build.gradle  proguard-rules.pro
prepperapp/android/app/src/main/cpp/: CMakeLists.txt  tantivy_jni.cpp
prepperapp/config/: content_location.json
prepperapp/content/: SETUP.md  medical_priorities.txt  tier1_downloads.json
prepperapp/content-sizing/: check_download_status.sh  create_pill_database.py  download_all_content.sh  download_all_final.sh  download_background.sh  download_fda_data.sh  download_status_report.md  estimate_wikipedia_size.py  monitor_downloads.sh  realtime_monitor.sh  sample_content_sizes.py
prepperapp/content-sizing/reports/: content_sizing_report.json
prepperapp/content/scripts/: check_missing.sh  chunked_downloader.py  content_structurer.py  content_summary.md  create_manifest.py  download_all.sh  download_assets.sh  download_content.sh  download_list.json  download_manager.py  download_military_manuals.py  download_missing_essentials.sh  download_monitor.py  download_tier1_content.py  download_wikipedia_medical.py  download_with_curl.sh  extract_all.py  extract_all_final.py  extract_all_fixed.py  extract_all_v3.py  extract_curated_zim.py  extract_curated_zim_streaming.py  extract_p0_only.py  image_extractor.py  pdf_pipeline_test.py  pdf_processor.py  process_content.py  process_plant_data.py  requirements.txt  safe_content_check.py  smart_download.sh  start_downloads.sh  test_pipeline.sh  tier1_curl_download.sh  validate_search_safety.py  verify_downloads.py
prepperapp/content/test_data/: anaphylaxis_treatment.html  hemorrhage_control.html  hypothermia_treatment.html
prepperapp/docs/: ffi-integration.md
prepperapp/ios/: README.md
prepperapp/mobile/shared/tantivy-bridge/: Cargo.toml  bindings.h  build.rs
prepperapp/mobile/shared/tantivy-bridge/src/: lib.rs
prepperapp/rust/cli-poc/: Cargo.toml  README.md
prepperapp/rust/cli-poc/content_index/: .managed.json  meta.json
prepperapp/rust/cli-poc/src/: main.rs
prepperapp/rust/tantivy-indexer/: Cargo.toml
prepperapp/rust/tantivy-indexer/src/: main.rs  main_mobile.rs
prepperapp/rust/tantivy-mobile/: Cargo.toml  README.md  build.rs  tantivy_mobile.h
prepperapp/rust/tantivy-mobile/src/: ffi.rs  lib.rs  multi_search.rs
prepperapp/scripts/: build-android-lib.sh  build-ios-lib.sh  build-rust-poc.sh  build-tantivy-indexer.sh  copy_test_content_to_android.sh  copy_test_content_to_ios.sh  create-xcframework.sh  generate_test_content.py
prepperapp/tests/: test_ios_components.swift
(+71 files in other folders)
