[package]
name = "tantivy-poc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tantivy-poc"
path = "src/main.rs"

[[bin]]
name = "index_builder"
path = "src/bin/index_builder.rs"

[dependencies]
tantivy = "0.22"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = "fat"         # Enable Link Time Optimization
strip = true        # Strip symbols from binary
codegen-units = 1   # Compile crates one after another for better optimization