[package]
name = "tantivy-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tantivy = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.7"

[profile.release]
lto = "fat"          # Enable link-time optimization
codegen-units = 1    # Maximize optimization opportunities
panic = "abort"      # Abort on panic to reduce binary size
strip = true         # Strip symbols from the binary
opt-level = "z"      # Optimize for size