[package]
name = "tantivy-mobile"
version = "0.1.0"
edition = "2021"

[lib]
name = "tantivy_mobile"
crate-type = ["cdylib", "staticlib"]

[dependencies]
tantivy = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
log = "0.4"
rayon = "1.8"

[build-dependencies]
cbindgen = "0.26"

[profile.release]
opt-level = "z"     # Optimize for size
lto = "fat"         # Enable Link Time Optimization  
strip = true        # Strip symbols from binary
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary, no unwinding

# iOS specific settings
[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2"

# Android specific settings
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
log = "0.4"