[package]
name = "prepperapp-tantivy-bridge"
version = "1.0.0"
edition = "2021"

[lib]
name = "tantivy_bridge"
crate-type = ["cdylib", "staticlib"]

[dependencies]
tantivy = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.27"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true